--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   },
